fix scroll overflow css

--- a/src/styles/main-page.css
+++ b/src/styles/main-page.css
@@ -1,11 +1,12 @@
 .main-layout {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  max-height: 100vh;
   display: flex;
 }
 
 .main-layout .sidebar {
   width: 240px;
+  height: 100vh;
 }
 
 .main-layout .topbar {
@@ -14,6 +15,6 @@
 }
 
 .main-layout .main-content {
-  height: calc(100vh - 64px);
   width: 100%;
+  overflow: auto;
 }
